# ChangeLog for net-www/mozilla
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.178 2004/06/25 16:00:39 agriffis Exp $

  25 Jun 2004; Aron Griffis <agriffis@gentoo.org> mozilla-1.6-r1.ebuild:
  QA - fix use invocation

  22 Jun 2004; Brad Laue <brad@gentoo.org> files/icon/mozilla.desktop,
  mozilla-1.7.ebuild:
  Move the Mozilla .desktop menu entry to the freedesktop compliant location.
  Further enhancement including translations to follow.

  20 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> mozilla-1.7.ebuild:
  Disabled the amd64 patch as it is not necessary any longer.

  19 Jun 2004; Aron Griffis <agriffis@gentoo.org> mozilla-1.6-r1.ebuild,
  mozilla-1.7.ebuild, mozilla-1.7_rc1-r1.ebuild, mozilla-1.7_rc2.ebuild,
  mozilla-1.7_rc3.ebuild:
  Fix bug 54402: change mozilla description from browser to application suite

  19 Jun 2004; Aron Griffis <agriffis@gentoo.org> mozilla-1.6-r1.ebuild,
  mozilla-1.7.ebuild, mozilla-1.7_rc1-r1.ebuild, mozilla-1.7_rc2.ebuild,
  mozilla-1.7_rc3.ebuild:
  Fix bug 54402: change mozilla description from browser to application suite

*mozilla-1.7 (19 Jun 2004)

  19 Jun 2004; Brad Laue <brad@gentoo.org> +mozilla-1.7.ebuild:
  Bump to Mozilla 1.7.

  17 Jun 2004; Aron Griffis <agriffis@gentoo.org> mozilla-1.7_rc2.ebuild,
  mozilla-1.7_rc3.ebuild:
  Fix bug 54158: enigmail upstream changed the tarball content without bumping
  the version. Use the new tarball on mirror://gentoo to solve the problem. When
  the next version of enigmail is released, plan to switch back to the upstream
  tarball.

*mozilla-1.7_rc3 (09 Jun 2004)

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> +mozilla-1.7_rc3.ebuild:
  Update to 1.7_rc3

*mozilla-1.7_rc2 (09 Jun 2004)

  09 Jun 2004; Aron Griffis <agriffis@gentoo.org>
  +files/ipc-1.0.6-nsPipeChannel.patch, -mozilla-1.7_beta-r1.ebuild,
  mozilla-1.7_rc1-r1.ebuild, -mozilla-1.7_rc1.ebuild, +mozilla-1.7_rc2.ebuild: